...
            android:textColor="#000000" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/userCloseFriends"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="155dp"
        android:background="@drawable/add_background_grey"
        android:contentDescription="Is close friend"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_people_outline_black_24dp" />

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
...
