<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="145dp"
    android:layout_gravity="left"
    android:background="@color/backGroundRed"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicInMenu"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_profil_24dp" />

        <TextView
            android:id="@+id/nicknameInMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Nickname"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usernameInMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="\@username" />

    </LinearLayout>
</LinearLayout>